task input update

--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -69,11 +69,11 @@
                                 <md-divider></md-divider>
                             </md-list-item>
                         </md-list>
+                        <p ng-if="tasklist.length == 0">You don't have any tasks configured yet.</p>
                     </md-card-content>
                 </md-card>
             </div>
             <div flex="100" flex-gt-sm="40" layout-align="row" layout-wrap>
-                
                 <md-card class="md-whiteframe-4dp" style="background: #fafafa;" flex="100">
                         <md-card-header>
                             <md-card-header-text>
