--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -224,7 +224,7 @@
                                                     <div ng-messages="createTaskForm.task_date.$error">
                                                         <div ng-message="required">Run date required!</div>
                                                     </div>
-                                                    
+
                                                 </md-input-container>
                                             </md-list-item>
                                                                 
@@ -257,25 +257,25 @@
                                                     <label>Choose Which Day To Run The Task</label>
                                                     <md-select ng-model="task.runDay" ng-required="task.isReoccuring">
                                                         <md-option><em>None</em></md-option>
-                                                        <md-option ng-value="'Sunday'">
+                                                        <md-option ng-value="0">
                                                             Sunday
                                                         </md-option>
-                                                        <md-option ng-value="'Monday'">
+                                                        <md-option ng-value="1">
                                                             Monday
                                                         </md-option>
-                                                        <md-option ng-value="'Tuesday'">
+                                                        <md-option ng-value="2">
                                                             Tuesday
                                                         </md-option>
-                                                        <md-option ng-value="'Wednesday'">
+                                                        <md-option ng-value="3">
                                                             Wednesday
                                                         </md-option>
-                                                        <md-option ng-value="'Thursday'">
+                                                        <md-option ng-value="4">
                                                             Thursday
                                                         </md-option>
-                                                        <md-option ng-value="'Friday'">
+                                                        <md-option ng-value="5">
                                                             Friday
                                                         </md-option>
-                                                        <md-option ng-value="'Saturday'">
+                                                        <md-option ng-value="6">
                                                             Saturday
                                                         </md-option>
                                                     </md-select>
