--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -231,7 +231,7 @@
                                                 <md-input-container class="md-block lightweight-md-input" flex>
                                                     <label>Specify A Run Date For The Task</label>
 
-                                                    <md-datepicker flex="80" style="width: 100%;" ng-model="taskAddObj.taskDate" name="task_date" md-placeholder="No Date Chosen" md-open-on-focus></md-datepicker>
+                                                    <md-datepicker flex="80" style="width: 100%;" ng-model="taskAddObj.runDate" name="task_date" md-placeholder="No Date Chosen" md-open-on-focus></md-datepicker>
                                                     
                                                     <div ng-messages="createTaskForm.task_date.$error">
                                                         <div ng-message="required">Run date required!</div>
