--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -43,6 +43,23 @@
 	</head>
 
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122175355-1"></script>
+
+    <script>
+
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag(){dataLayer.push(arguments);}
+
+    gtag('js', new Date());
+
+    gtag('config', 'UA-122175355-1', {'page_path': {{page_path}}});
+
+    </script>
+
+
 
 
 
