gtag added to index and app.run

--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -55,7 +55,7 @@
 
     gtag('js', new Date());
 
-    gtag('config', 'UA-122175355-1', {'page_path': {{page_path}}});
+    gtag('config', 'UA-122175355-1');
 
     </script>
 
