--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -55,7 +55,7 @@
 
     gtag('js', new Date());
 
-    gtag('config', 'UA-122175355-1');
+    gtag('config', 'UA-122175355-1', { 'send_page_view': false });
 
     </script>
 
