--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -55,7 +55,7 @@
 
     gtag('js', new Date());
 
-    gtag('config', 'UA-115574705-1', { 'send_page_view': false });
+    gtag('config', 'UA-115574705-1');
 
     </script>
 
